--- a/html/contact.html
+++ b/html/contact.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact</title>
-    <link rel="stylesheet" href="../css/Basis.css">
+    <link rel="stylesheet" href="../css/basis.css">
+    <link rel="stylesheet" href="../css/contact.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
 </head>
 <body>
 <header class="limited">
     <a href="../index.html">
-        <img id="logo" src="../images/Logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
+        <img id="logo" src="../images/logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
     <h1>Immobili&euml;n Wyns</h1>
     <div></div>
@@ -17,19 +19,19 @@
 <nav class="navigatie">
     <section class="limited">
         <a href="../index.html" id="navFirst">Home</a>
-        <a href="Verhuur.html">Verhuur</a>
-        <a href="Verkoop.html">Verkoop</a>
-        <a href="Contact.html">Contact</a>
+        <a href="verhuur.html">Verhuur</a>
+        <a href="verkoop.html">Verkoop</a>
+        <a class="active" href="contact.html">Contact</a>
     </section>
 </nav>
 
 <main class="limited">
-        <section>
+    <section>
         <h2>Nog vragen?</h2>
         <p>Is er toch nog iets dat we voor u kunnen doen? Nog enige onduidelijkheid over een bepaald pand? Voor meer
             informatie kunt u ons altijd contacteren via onderstaand formulier</p>
         <br>
-        <form action="ContactComplete.html">
+        <form action="contactComplete.html">
             <label>
                 Voornaam: <br>
                 <input class="contactI" type="text" name="voornaam">
@@ -64,9 +66,11 @@
     </section>
     <section>
         <h2>Hoe te bereiken?</h2>
-        <img id="gevelFoto" src="../images/fotoGevel.png" alt="Foto van de voorkant van ons filiaal" width="500" height="300">
+        <img id="gevelFoto" src="../images/fotoGevel.png" alt="Foto van de voorkant van ons filiaal" width="500"
+             height="300">
         <section id="contactInfo">
-            <p>U bent natuurlijk ook altijd welkom om eens binnen te springen voor een vrijblevend gesprek met onze immo-experts.</p>
+            <p>U bent natuurlijk ook altijd welkom om eens binnen te springen voor een vrijblevend gesprek met onze
+                immo-experts.</p>
             <strong>Pylyserlaan 112
                 8670 Koksijde
             </strong>
@@ -96,9 +100,9 @@
                 <nav class="navigatie-verticaal">
                     <ul>
                         <li><a href="../index.html">Home</a></li>
-                        <li><a href="../html/Verhuur.html">Verhuur</a></li>
-                        <li><a href="../html/Verkoop.html">Verkoop</a></li>
-                        <li><a href="../html/Contact.html">Contact</a></li>
+                        <li><a href="verhuur.html">Verhuur</a></li>
+                        <li><a href="verkoop.html">Verkoop</a></li>
+                        <li><a href="../html/contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </nav>
