--- a/html/verhuur.html
+++ b/html/verhuur.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Verkoop</title>
-    <link rel="stylesheet" href="../css/Basis.css">
+    <link rel="stylesheet" href="../css/basis.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico" >
+    <link rel="stylesheet" href="../css/verkoopverhuur.css">
 </head>
 <body>
-
 <header class="limited">
     <a href="../index.html">
-        <img id="logo" src="../images/Logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
+        <img id="logo" src="../images/logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
     <h1>Immobili&euml;n Wyns</h1>
     <div></div>
@@ -18,38 +19,40 @@
 <nav class="navigatie">
     <section class="limited">
         <a href="../index.html" id="navFirst">Home</a>
-        <a href="Verhuur.html">Verhuur</a>
-        <a href="Verkoop.html">Verkoop</a>
-        <a href="Contact.html">Contact</a>
+        <a class="active" href="verhuur.html">Verhuur</a>
+        <a href="verkoop.html">Verkoop</a>
+        <a href="contact.html">Contact</a>
     </section>
 </nav>
-<main>
 
+<main>
     <section class="vFilter limited">
         <label for="sFilterSlpk">Filters:</label>
         <select name="slpkFilter" id="sFilterSlpk">
             <option value="1 Slaapkamer">1 Slaapkamer</option>
-            <option value="2 Slaapkamers">2 Slaapkamers</option>
+            <option selected value="2 Slaapkamers">2 Slaapkamers</option>
             <option value="3 Slaapkamers">3 Slaapkamers</option>
             <option value="4+ Slaapkamers">4+ Slaapkamers</option>
         </select>
         <label for="sFilterPrijs"></label>
         <select name="prijsFilter" id="sFilterPrijs">
-            <option value="< 250">< &euro;249</option>
+            <option selected value="nolimit">Geen voorkeur</option>
+            <option value="< 250">&lt; &euro;249</option>
             <option value="250-500">&euro;250 - &euro;499</option>
             <option value="500-750">&euro;500 - &euro;749</option>
-            <option value="750+">> &euro;750</option>
+            <option value="750+">&gt; &euro;750</option>
         </select>
         <label for="sFilterVerhuur"></label>
         <select name="sFilterTypeV" id="sFilterVerhuur">
             <option value="weekend">Weekend</option>
             <option value="midweek">Midweek</option>
             <option value="Maand">Maand</option>
-            <option value="Jaar">Jaar</option>
+            <option selected value="Jaar">Jaar</option>
         </select>
 
-        <a href="VerhuurFiltered.html">
-            <button id="vFilterBtn">Zoek</button>
+        <a href="verhuurfiltered.html">
+            <button id="vFilterBtn">Zoek
+            </button>
         </a>
     </section>
 
@@ -58,29 +61,35 @@
             <section class="vKolom">
                 <section class="vBlock">
                     <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                        <h2>Villa</h2><p>&euro; 920</p>
+                        <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
+                             height="140">
+                        <h2>Villa</h2>
+                        <p>&euro; 920</p>
                     </a>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                    <h2>Villa</h2><p>&euro; 920</p>
+                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
+                         height="140">
+                    <h2>Villa</h2>
+                    <p>&euro; 920</p>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                    <h2>Villa</h2><p>&euro; 920</p>
+                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
+                         height="140">
+                    <h2>Villa</h2>
+                    <p>&euro; 920</p>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                    <h2>Villa</h2><p>&euro; 920</p>
-
-
+                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
+                         height="140">
+                    <h2>Villa</h2>
+                    <p>&euro; 920</p>
                 </section>
             </section>
         </section>
@@ -88,29 +97,35 @@
             <section class="vKolom">
                 <section class="vBlock">
                     <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                        <h2>Villa</h2><p>&euro; 920</p>
+                        <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
+                             height="140">
+                        <h2>Villa</h2>
+                        <p>&euro; 920</p>
                     </a>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                    <h2>Villa</h2><p>&euro; 920</p>
+                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
+                         height="140">
+                    <h2>Villa</h2>
+                    <p>&euro; 920</p>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                    <h2>Villa</h2><p>&euro; 920</p>
+                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
+                         height="140">
+                    <h2>Villa</h2>
+                    <p>&euro; 920</p>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                    <h2>Villa</h2><p>&euro; 920</p>
-
-
+                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
+                         height="140">
+                    <h2>Villa</h2>
+                    <p>&euro; 920</p>
                 </section>
             </section>
         </section>
@@ -118,29 +133,35 @@
             <section class="vKolom">
                 <section class="vBlock">
                     <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                        <h2>Villa</h2><p>&euro; 920</p>
+                        <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
+                             height="140">
+                        <h2>Villa</h2>
+                        <p>&euro; 920</p>
                     </a>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                    <h2>Villa</h2><p>&euro; 920</p>
+                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
+                         height="140">
+                    <h2>Villa</h2>
+                    <p>&euro; 920</p>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                    <h2>Villa</h2><p>&euro; 920</p>
+                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
+                         height="140">
+                    <h2>Villa</h2>
+                    <p>&euro; 920</p>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                    <h2>Villa</h2><p>&euro; 920</p>
-
-
+                    <img class="vImg" src="../images/Verhuur/garagebox1.jpg"
+                         alt="Foto van twee garageboxen, 1 met open deur" width="205" height="140">
+                    <h2>Garagebox</h2>
+                    <p>&euro; 60</p>
                 </section>
             </section>
         </section>
@@ -148,34 +169,33 @@
             <section class="vKolom">
                 <section class="vBlock">
                     <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                        <h2>Villa</h2><p>&euro; 920</p>
+                        <img class="vImg" src="../images/Verhuur/garagebox2.jpg"
+                             alt="Foto van vier garageboxen op een rij" width="205" height="140">
+                        <h2>Garagebox</h2>
+                        <p>&euro; 40</p>
                     </a>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                    <h2>Villa</h2><p>&euro; 920</p>
+                    <img class="vImg" src="../images/Verhuur/garagebox3.jpg"
+                         alt="Foto van een reeks garagebox" width="205" height="140">
+                    <h2>Garagebox</h2>
+                    <p>&euro; 30</p>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                    <h2>Villa</h2><p>&euro; 920</p>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                    <h2>Villa</h2><p>&euro; 920</p>
-
-
                 </section>
             </section>
         </section>
 
     </article>
+
 
 </main>
 <footer>
@@ -192,9 +212,9 @@
                 <nav class="navigatie-verticaal">
                     <ul>
                         <li><a href="../index.html">Home</a></li>
-                        <li><a href="../html/Verhuur.html">Verhuur</a></li>
-                        <li><a href="../html/Verkoop.html">Verkoop</a></li>
-                        <li><a href="../html/Contact.html">Contact</a></li>
+                        <li><a href="../html/verhuur.html">Verhuur</a></li>
+                        <li><a href="verkoop.html">Verkoop</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </nav>
