--- a/html/verhuurfiltered.html
+++ b/html/verhuurfiltered.html
@@ -2,13 +2,13 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Contact geslaagd</title>
-    <link rel="stylesheet" href="../css/Basis.css">
+    <title>Verhuur (Gefilterd)</title>
+    <link rel="stylesheet" href="../css/basis.css">
 </head>
 <body>
 <header class="limited">
     <a href="../index.html">
-        <img id="logo" src="../images/Logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
+        <img id="logo" src="../images/logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
     <h1>Immobili&euml;n Wyns</h1>
     <div></div>
@@ -17,20 +17,13 @@
 <nav class="navigatie">
     <section class="limited">
         <a href="../index.html" id="navFirst">Home</a>
-        <a href="Verhuur.html">Verhuur</a>
-        <a href="Verkoop.html">Verkoop</a>
-        <a href="Contact.html">Contact</a>
+        <a href="verhuur.html">Verhuur</a>
+        <a href="verkoop.html">Verkoop</a>
+        <a href="contact.html">Contact</a>
     </section>
 </nav>
 
-<main>
-    <h1>
-        U boodschap is bij ons aangekomen, een medewerker neemt zo snel mogelijk contact met u op
-    </h1>
-    <a href="../index.html"><button>
-        Terug naar de startpagina
-    </button></a>
-</main>
+</body>
 <footer>
     <aside class="footer">
         <nav class="rij">
@@ -45,9 +38,9 @@
                 <nav class="navigatie-verticaal">
                     <ul>
                         <li><a href="../index.html">Home</a></li>
-                        <li><a href="../html/Verhuur.html">Verhuur</a></li>
-                        <li><a href="../html/Verkoop.html">Verkoop</a></li>
-                        <li><a href="../html/Contact.html">Contact</a></li>
+                        <li><a href="verhuur.html">Verhuur</a></li>
+                        <li><a href="verkoop.html">Verkoop</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </nav>
@@ -61,5 +54,4 @@
         </nav>
     </aside>
 </footer>
-</body>
 </html>
