--- a/html/verkoop.html
+++ b/html/verkoop.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Verkoop</title>
-    <link rel="stylesheet" href="../css/Basis.css">
+    <link rel="stylesheet" href="../css/basis.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
+    <link rel="stylesheet" href="../css/verkoopverhuur.css">
 </head>
 <body>
+
 <header class="limited">
     <a href="../index.html">
-        <img id="logo" src="../images/Logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
+        <img id="logo" src="../images/logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
     <h1>Immobili&euml;n Wyns</h1>
     <div></div>
@@ -17,13 +20,13 @@
 <nav class="navigatie">
     <section class="limited">
         <a href="../index.html" id="navFirst">Home</a>
-        <a href="Verhuur.html">Verhuur</a>
-        <a href="Verkoop.html">Verkoop</a>
-        <a href="Contact.html">Contact</a>
+        <a href="verhuur.html">Verhuur</a>
+        <a class="active" href="verkoop.html">Verkoop</a>
+        <a href="contact.html">Contact</a>
     </section>
 </nav>
-
 <main>
+
     <section class="vFilter limited">
         <label for="sFilterSlpk">Filters:</label>
         <select name="slpkFilter" id="sFilterSlpk">
@@ -34,10 +37,10 @@
         </select>
         <label for="sFilterPrijs"></label>
         <select name="prijsFilter" id="sFilterPrijs">
-            <option value="< 250">< &euro;249</option>
+            <option value="< 250">&lt; &euro;249</option>
             <option value="250-500">&euro;250 - &euro;499</option>
             <option value="500-750">&euro;500 - &euro;749</option>
-            <option value="750+">> &euro;750</option>
+            <option value="750+">&gt; &euro;750</option>
         </select>
         <label for="sFilterVerhuur"></label>
         <select name="sFilterTypeV" id="sFilterVerhuur">
@@ -47,9 +50,8 @@
             <option value="Jaar">Jaar</option>
         </select>
 
-        <a href="VerhuurFiltered.html">
-            <button id="vFilterBtn">Zoek
-            </button>mn b43w./
+        <a href="verhuurfiltered.html">
+            <button id="vFilterBtn">Zoek</button>
         </a>
     </section>
 
@@ -58,26 +60,26 @@
             <section class="vKolom">
                 <section class="vBlock">
                     <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                        <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205" height="140" >
                         <h2>Villa</h2><p>&euro; 920</p>
                     </a>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205" height="140" >
                     <h2>Villa</h2><p>&euro; 920</p>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205" height="140" >
                     <h2>Villa</h2><p>&euro; 920</p>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205" height="140" >
                     <h2>Villa</h2><p>&euro; 920</p>
 
 
@@ -101,6 +103,7 @@
             </div>
         </div>
     </article>
+
 </main>
 <footer>
     <aside class="footer">
@@ -116,9 +119,9 @@
                 <nav class="navigatie-verticaal">
                     <ul>
                         <li><a href="../index.html">Home</a></li>
-                        <li><a href="../html/Verhuur.html">Verhuur</a></li>
-                        <li><a href="../html/Verkoop.html">Verkoop</a></li>
-                        <li><a href="../html/Contact.html">Contact</a></li>
+                        <li><a href="verhuur.html">Verhuur</a></li>
+                        <li><a href="../html/verkoop.html">Verkoop</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </nav>
