--- a/html/verkoopfiltered.html
+++ b/html/verkoopfiltered.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Verkoop (Gefilterd)</title>
-    <link rel="stylesheet" href="../css/Basis.css">
+    <link rel="stylesheet" href="../css/basis.css">
 </head>
 <body>
 <header class="limited">
     <a href="../index.html">
-        <img id="logo" src="../images/Logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
+        <img id="logo" src="../images/logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
     <h1>Immobili&euml;n Wyns</h1>
     <div></div>
@@ -17,9 +17,9 @@
 <nav class="navigatie">
     <section class="limited">
         <a href="../index.html" id="navFirst">Home</a>
-        <a href="Verhuur.html">Verhuur</a>
-        <a href="Verkoop.html">Verkoop</a>
-        <a href="Contact.html">Contact</a>
+        <a href="verhuur.html">Verhuur</a>
+        <a href="verkoop.html">Verkoop</a>
+        <a href="contact.html">Contact</a>
     </section>
 </nav>
 
@@ -37,9 +37,9 @@
                 <nav class="navigatie-verticaal">
                     <ul>
                         <li><a href="../index.html">Home</a></li>
-                        <li><a href="../html/Verhuur.html">Verhuur</a></li>
-                        <li><a href="../html/Verkoop.html">Verkoop</a></li>
-                        <li><a href="../html/Contact.html">Contact</a></li>
+                        <li><a href="verhuur.html">Verhuur</a></li>
+                        <li><a href="verkoop.html">Verkoop</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </nav>
