--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial scale=1.0">
     <title>Immobili&euml;n Wyns</title>
-    <link rel="stylesheet" href="css/Basis.css">
-    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" sizes="16x16">
+    <link rel="stylesheet" href="css/basis.css">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" >
 </head>
 <body>
 <header class="limited">
     <a href="index.html">
-        <img id="logo" src="images/Logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
+        <img id="logo" src="images/logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
     <h1>Immobili&euml;n Wyns</h1>
     <div></div>
@@ -18,10 +18,10 @@
 
 <nav class="navigatie">
     <section class="limited">
-        <a href="index.html" id="navFirst">Home</a>
-        <a href="html/Verhuur.html">Verhuur</a>
-        <a href="html/Verkoop.html">Verkoop</a>
-        <a href="html/Contact.html">Contact</a>
+        <a class="active" href="index.html">Home</a>
+        <a href="html/verhuur.html">Verhuur</a>
+        <a href="html/verkoop.html">Verkoop</a>
+        <a href="html/contact.html">Contact</a>
     </section>
 </nav>
 
@@ -46,9 +46,9 @@
                 <nav class="navigatie-verticaal">
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="html/Verhuur.html">Verhuur</a></li>
-                        <li><a href="html/Verkoop.html">Verkoop</a></li>
-                        <li><a href="html/Contact.html">Contact</a></li>
+                        <li><a href="html/verhuur.html">Verhuur</a></li>
+                        <li><a href="html/verkoop.html">Verkoop</a></li>
+                        <li><a href="html/contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </nav>
